# paper-fluff-cutter

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.cursor/skills/fluff-cutter-usage/: SKILL.md
.github/workflows/: publish.yml  test.yml
src/fluff_cutter/: __init__.py  analyzer.py  cli.py  config.py  download.py  output.py  pdf.py  wiki.py
src/fluff_cutter/providers/: __init__.py  anthropic.py  base.py  openai.py  openrouter.py
tests/: __init__.py  test_analyzer.py  test_cli_wiki.py  test_config.py  test_download.py  test_output.py  test_pdf.py  test_providers.py  test_wiki.py
