[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluff-cutter"
version = "0.2.0"
description = "A CLI tool to analyze academic papers and extract their core value"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.18",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
    "pyyaml>=6.0",
]

[project.scripts]
fluff-cutter = "fluff_cutter.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
